# q-robot-Thesis-Introductory

./: .gitignore  README.md  dump.rdb  pyproject.toml  quantum_publisher.py  requirements.txt  test_main3.py  tiago.py  tiago_Quantum_brain.py  tiago_testmain.py  tiago_testmain2.py  ui.py
.qrobot_logs/: qrobot.log.2023-01-17  qrobot.log.2023-01-18  qrobot.log.2023-01-20  qrobot.log.2023-01-21  qrobot.log.2023-01-22  qrobot.log.2023-01-23  qrobot.log.2023-01-24  qrobot.log.2023-01-25  qrobot.log.2023-01-26  qrobot.log.2023-01-28  qrobot.log.2023-01-29  qrobot.log.2023-01-30  qrobot.log.2023-01-31  qrobot.log.2023-02-01  qrobot.log.2023-02-02  qrobot.log.2023-02-03  qrobot.log.2023-02-06  qrobot.log.2023-02-16  qrobot.log.2023-02-23  qrobot.log.2023-02-24  qrobot.log.2023-02-25  qrobot.log.2023-02-26  qrobot.log.2023-03-05  qrobot.log.2023-03-08  qrobot.log.2023-03-09  qrobot.log.2023-03-21  qrobot.log.2023-04-03  qrobot.log.2023-04-04  qrobot.log.2023-04-05  qrobot.log.2023-05-03  qrobot.log.2023-05-10  qrobot.log.2023-05-11  qrobot.log.2023-05-13  qrobot.log.2023-05-15  qrobot.log.2023-05-17  qrobot.log.2023-05-19  qrobot.log.2023-05-20  qrobot.log.2023-05-21
config/: pick_motions.yaml
launch/: handover.launch  pick_demo.launch  pick_simulation.launch
q_turtlebot/: CMakeLists.txt  package.xml  quantum_publisher.py  quantum_publisher_main.py
scripts/: humandistancecalculator.py  main.py  objectrondetection.py  t1.py  tiago_arm_to_object_distance.py  tiago_grasping.py  tiago_mechanism_trigger.py  tuck_arm.py  (+2 more)
scripts/qubit/: bloch1.py  pyproject.toml
(+39 files in other folders)
